놀이터 등록, 수정 구현

--- a/src/main/resources/templates/mainPage.mustache
+++ b/src/main/resources/templates/mainPage.mustache
@@ -7,6 +7,7 @@
         <a href="/" role="button" class="btn btn-secondary">놀이터 보기</a>
         <a href="/" role="button" class="btn btn-secondary">친구목록</a>
         <a href="/" role="button" class="btn btn-secondary">내 아이 보기</a>
+        <a href="/" role="button" class="btn btn-secondary">놀이터 관리</a>
     </div>
 </div>
 
