--- a/src/main/resources/templates/playgrounds-save.mustache
+++ b/src/main/resources/templates/playgrounds-save.mustache
@@ -5,6 +5,7 @@
 <div class ="col-md-12">
     <div class ="col-md-4">
         <form>
+
             <div class ="form-group">
                 <label for="name">놀이터 이름</label>
                 <input type ="text" class ="form-control"
@@ -18,22 +19,22 @@
 
             <div class ="form-group">
                 <label for="minLatitude">놀이터 min위도</label>
-                <input type ="number" step="0.00000001" class ="form-control"
+                <input type ="number" step="0.001" class ="form-control"
                        id="minLatitude" placeholder="놀이터 위치(작은 위도)를 입력하세요">
             </div>
             <div class ="form-group">
                 <label for="maxLatitude">놀이터 max위도</label>
-                <input type ="number" step="0.00000001" class ="form-control"
+                <input type ="number" step="0.001" class ="form-control"
                        id="maxLatitude" placeholder="놀이터 위치(큰 위도)를 입력하세요">
             </div>
             <div class ="form-group">
                 <label for="minLongitude">놀이터 min경도</label>
-                <input type ="number" step="0.00000001" class ="form-control"
+                <input type ="number" step="0.001" class ="form-control"
                        id="minLongitude" placeholder="놀이터 위치(작은 경도)를 입력하세요">
             </div>
             <div class ="form-group">
                 <label for="maxLongitude">놀이터 max경도</label>
-                <input type ="number" step="0.00000001" class ="form-control"
+                <input type ="number" step="0.001" class ="form-control"
                        id="maxLongitude" placeholder="놀이터 위치(큰 경도)를 입력하세요">
             </div>
             <div class ="form-group">
@@ -43,8 +44,8 @@
             </div>
 
         </form>
-        <a href ="/" role="button" class ="btn btn-secondary">취소</a>
-        <button type ="button" class="btn btn-primary" id="btn-save">등록</button>
+        <a href ="/playgrounds/list" role="button" class ="btn btn-secondary">취소</a>
+        <button type=button" class="btn btn-primary" id="btn-save">등록</button>
     </div>
 </div>
 {{>layout/footer}}
