--- a/src/main/resources/templates/playgrounds-list.mustache
+++ b/src/main/resources/templates/playgrounds-list.mustache
@@ -4,7 +4,7 @@
 <div class ="col-md-12">
     <div class ="row">
         <div class ="col-md-6">
-            <a href ="/playgrounds/save" role ="button" class ="btn btn-primary">글 등록</a>
+            <a href ="/playgrounds/save" role ="button" class ="btn btn-primary">놀이터 등록</a>
         </div>
     </div>
     <br>
